--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,28 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MqttNodeTest",
+            "request": "launch",
+            "mainClass": "com.front.test.MqttNodeTest",
+            "projectName": "iot_gateway"
+        },
+        {
+            "type": "java",
+            "name": "MsgMain",
+            "request": "launch",
+            "mainClass": "com.front.test.MsgMain",
+            "projectName": "iot_gateway"
+        },
+        {
+            "type": "java",
+            "name": "ComandLineArgumetsTest",
+            "request": "launch",
+            "mainClass": "com.front.test.ComandLineArgumetsTest",
+            "projectName": "iot_gateway",
+            "args": "--an MyApplicationName -s temperature,huminity"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
