--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,21 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MessageParsingTest",
+            "request": "launch",
+            "mainClass": "com.front.test.MessageParsingTest",
+            "projectName": "iot_gateway"
+        },
+        {
+            "type": "java",
+            "name": "messageParsingTest",
+            "request": "launch",
+            "mainClass": "com.front.test.messageParsingTest",
+            "projectName": "iot_gateway",
+            "args": "-c --an NHNAcademyEMS -s humidity,temperature,co2"
+        },
+        {
+            "type": "java",
             "name": "MqttNodeTest",
             "request": "launch",
             "mainClass": "com.front.test.MqttNodeTest",
