reflection 구성, 연결 완료

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,13 @@
             "type": "java",
             "name": "Configurations",
             "request": "launch",
+            "mainClass": "com.front.Configurations",
+            "projectName": "iot_gateway"
+        },
+        {
+            "type": "java",
+            "name": "Configurations",
+            "request": "launch",
             "mainClass": "com.front.node.Configurations",
             "projectName": "iot_gateway"
         },
