fin: client 분리 성공, configuration class 작성 완료

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "name": "Configurations",
             "request": "launch",
             "mainClass": "com.front.Configurations",
-            "projectName": "iot_gateway"
+            "projectName": "iot_gateway",
+            "args": "-c -s humidity,temperature,co2"
         },
         {
             "type": "java",
